# geno-pear

./: .gitignore  GENO.md  README.md  SKILL.md  genotools.yaml  pyproject.toml
.specs/: TENETS.md  VISION.md
config/defaults/: pear.yaml
geno_pear/: __init__.py  agent.py  cli.py  commands.py  gp.py  watch.py
skills/geno-pear/: SKILL.md
