[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "geno-pear"
version = "0.2.0"
description = "Pair-programming companion + reusable file-watch library for the geno ecosystem."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "42euge" }]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
pear = "geno_pear.cli:main"

[tool.setuptools.packages.find]
include = ["geno_pear*"]
